Price adjusted to Indian Standards

--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -9,7 +9,7 @@
     <ul>
         <li><%= listingData.title %></li>
         <li><%= listingData.description %></li>
-        <li><%= listingData.price %></li>
+        <li> &#x20B9 <%= listingData.price.toLocaleString('en-IN') %></li>
         <li><%= listingData.location %></li>
 
     </ul>
