update route created, method override for put reqest is implemented

--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -13,5 +13,7 @@
         <li><%= listingData.location %></li>
 
     </ul>
+    <a href="/listing/<%= listingData._id %>/edit" >edit this listing</a>
+    <a href="/listings">goto listing</a>
 </body>
 </html>
