--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -14,7 +14,7 @@
         <br><br>
         <input type="number" name="listing[price]" placeholder="enter price">
         <br><br>
-        <input type="text" name="listing[image]" placeholder="enter image url">
+        <input type="text" name="listing[image][url]" placeholder="enter image url">
         <br><br>
         <input type="text" name="listing[location]" placeholder="enter location">
         <br><br>
