--- a/views/listing/edit.ejs
+++ b/views/listing/edit.ejs
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wonder Lust</title>
-</head>
+<% layout('./layouts/boilerplate.ejs') %>
+
 <body>
     <h1>Edit New Listing</h1>
     <form method="post" action="/listings/<%= listing._id %>?_method=PUT">
