--- a/views/listing/index.ejs
+++ b/views/listing/index.ejs
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wonder Lust</title>
-</head>
+<% layout('./layouts/boilerplate.ejs') %>
+
 <body>
     <h3>All Listings</h3>
     <form action="/listings/new" method="get">
