--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wonder Lust</title>
-</head>
+<% layout('./layouts/boilerplate.ejs') %>
+
 <body>
     <h1>Add New Listing</h1>
     <form action="/newListing" method="post">
