--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,3 +23,39 @@
     color: #fe424d !important;
     font-size: 2rem;
 }
+
+/* footer coloring */
+.f-info-links a {
+
+    text-decoration: none;
+    color: #222222;
+}
+.f-info-links a:hover{
+    text-decoration: underline;
+    color: rgb(71, 71, 217);
+}
+
+.f-info{
+    text-align: center;
+    background-color: #ebebeb;
+    height: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: space-evenly;
+}
+.f-info-links{
+    width: 100%;
+}
+.f-info-socials {
+    width: 100%;
+    font-size: 1.2rem;
+    vertical-align: middle;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.f-info-socials i {
+    margin-right: 1rem;
+}
