edited the new.ejs file

--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -9,11 +9,13 @@
 
   <div class="mb-3">
     <input type="text" name="listing[title]" class="form-control" placeholder="Title" required>
+    <div class="valid-feedback">Title Looks Good</div>
     <div class="invalid-feedback">Title is required</div>
   </div>
 
   <div class="mb-3">
     <textarea name="listing[description]" class="form-control" placeholder="Description" required></textarea>
+    <div class="valid-feedback">Description Looks Good</div>
     <div class="invalid-feedback">Description is required</div>
   </div>
 
