--- a/views/listing/index.ejs
+++ b/views/listing/index.ejs
@@ -13,7 +13,7 @@
                     <div class="card-body">
                         <h5><%= listing.title %></h5>
                         <p><%= listing.description %><br>
-                        <b>&#x20B9 <%= listing.price.toLocaleString("en-IN") %>/Night</b></p>
+                        <b>&#36 <%= listing.price.toLocaleString("en-US") %>/Night</b></p>
                     </div>
                 </div>
             </a>
