--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -14,7 +14,7 @@
             <div class="show-content">
                 <h2 class="show-title"><%= listingData.title %></h2>
                 <p class="show-description"><%= listingData.description %></p>
-                <p class="show-price">&#x20B9 <%= listingData.price.toLocaleString('en-IN') %>/Night</p>
+                <p class="show-price">&#36 <%= listingData.price.toLocaleString('en-US') %>/Night</p>
                 <p class="show-location"><%= listingData.location %></p>
             </div>
 
